load the main image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         body {margin: 0;}
     </style>
-    <title>TLW Jam</title>
+    <title>Strategy Game</title>
 </head>
 <body>
     <div id="content"></div>
